@@ -118,7 +118,7 @@ public class ReflectXmlLoader
             }
         } else {
             try {
-                value = (IXmlForm) type.newInstance(); // args ...
+                value = (IXmlForm) type.getConstructor().newInstance(); // args ...
             } catch (ReflectiveOperationException e) {
                 throw new LoaderException("failed to instantiate " + type, e);
             }
